--- a/index.html
+++ b/index.html
@@ -347,8 +347,7 @@
                     </p>
                     <p>
                         <a target="_blank"
-                            href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJZZzScSxHkjHQHnfGwchDcXJRqDwFZGpjRfbDQlWWMFwkrxZLXtxpVfhHNZWJgKLHjfqsq"><i
-                                class="fab fa-google"></i> Mail</a>
+                            onclick="sendEmail()"></i> Mail</a>
                     </p>
 
                 </div>
