--- a/index.html
+++ b/index.html
@@ -349,7 +349,11 @@
                         <a target="_blank"
                             onclick="sendEmail()"></i> Mail</a>
                     </p>
-
+                    <script>
+function sendEmail() {
+  window.location.href = "mailto:choudhariaditya681@gmail.com";
+}
+</script>
                 </div>
             </div>
             <footer>
