--- a/index.html
+++ b/index.html
@@ -347,7 +347,8 @@
                     </p>
                     <p>
                         <a target="_blank"
-                            onclick="sendEmail()"></i> Mail</a>
+                            onclick="sendEmail()"><i
+                                class="fab fa-google"></i> Mail</a>
                     </p>
                     <script>
 function sendEmail() {
