--- a/projects.html
+++ b/projects.html
@@ -263,11 +263,16 @@
         <p>
           <a target="_blank" href="https://github.com/adityachoudhari681"><i class="fab fa-github"></i> Github</a>
         </p>
-        <p>
-          <a target="_blank"
-            href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJZZzScSxHkjHQHnfGwchDcXJRqDwFZGpjRfbDQlWWMFwkrxZLXtxpVfhHNZWJgKLHjfqsq"><i
-              class="fab fa-google"></i> Mail</a>
-        </p>
+                    <p>
+                        <a target="_blank"
+                            onclick="sendEmail()"><i
+                                class="fab fa-google"></i> Mail</a>
+                    </p>
+                    <script>
+function sendEmail() {
+  window.location.href = "mailto:choudhariaditya681@gmail.com";
+}
+</script>
 
       </div>
     </div>
