--- a/index.html
+++ b/index.html
@@ -346,14 +346,13 @@
                             Github</a>
                     </p>
                     <p>
-                        <a 
-                            onclick="sendEmail()"><i
-                                class="fab fa-google"></i> Mail</a>
+                        <a target="_blank"
+                            onclick="sendEmail()">Mail</a>
                                             <script>
-function sendEmail() {
-  window.location.href = "mailto:choudhariaditya681@gmail.com";
-}
-</script>
+                            function sendEmail() {
+                              window.location.href = "mailto:choudhariaditya681@gmail.com";
+                            }
+                            </script>
                     </p>
 
                 </div>
