--- a/index.html
+++ b/index.html
@@ -346,17 +346,16 @@
                             Github</a>
                     </p>
                     <p>
-                        <a target="_blank"
-                            onclick="sendEmail()">Mail</a>
-                                            <script>
-                            function sendEmail() {
-                              window.location.href = "mailto:choudhariaditya681@gmail.com";
-                            }
-                            </script>
+                        <a target="_blank" onclick="sendEmail()" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJZZzScSxHkjHQHnfGwchDcXJRqDwFZGpjRfbDQlWWMFwkrxZLXtxpVfhHNZWJgKLHjfqsq" ><i class="fab fa-google"></i> Mail</a>
                     </p>
 
                 </div>
             </div>
+            <script>
+                function sendEmail() {
+                  window.location.href = "mailto:choudhariaditya681@gmail.com";
+                }
+            </script>
             <footer>
                 © 2024-25 Aditya Choudhari, All Rights Reserved .
             </footer>
