--- a/about.html
+++ b/about.html
@@ -176,17 +176,16 @@
             <a target="_blank" href="https://github.com/adityachoudhari681"><i class="fab fa-github"></i> Github</a>
           </p>
                     <p>
-                        <a target="_blank"
-                            onclick="sendEmail()"><i
-                                class="fab fa-google"></i> Mail</a>
+                        <a target="_blank" onclick="sendEmail()" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=CllgCJZZzScSxHkjHQHnfGwchDcXJRqDwFZGpjRfbDQlWWMFwkrxZLXtxpVfhHNZWJgKLHjfqsq" ><i class="fab fa-google"></i> Mail</a>
                     </p>
-                    <script>
-function sendEmail() {
-  window.location.href = "mailto:choudhariaditya681@gmail.com";
-}
-</script>
+                    
         </div>
       </div>
+      <script>
+          function sendEmail() {
+            window.location.href = "mailto:choudhariaditya681@gmail.com";
+          }
+      </script>
       <footer>
         © 2024-25 Aditya Choudhari, All Rights Reserved .
       </footer>
