--- a/projects.html
+++ b/projects.html
@@ -221,8 +221,8 @@
           <h2 style="margin-bottom: 10px;">Basic Portfolio </h2>
           <img style="margin-bottom: 10px;" src="basic_portfolio.png" alt="Basic Portfolio img">
 
-          <p style="margin-bottom: 5px;padding-left: 12px;padding-right: 15px; color: grey; font-size: 18px;">In the
-            learning phase I had made
+          <p style="margin-bottom: 5px;padding-left: 12px;padding-right: 15px; color: grey; font-size: 18px;">In my
+            learning phase I had this made
             Portfolio website which is deployed on Github. It is
             fully responsive and works on all display sizes of viewer's screen.
             this portfolio website is a previous version of my current portfolio website.
